[package]
name = "sdf_application"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
env_logger = "0.11.5"
log = "0.4"
wgpu = "22.1.0"
pollster = "0.3"
cgmath = "0.18"

#egui-wgpu = "0.27.2"
#egui-winit = "0.27.2"
#egui = "0.27.2"
#egui_plot = "0.27.2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
]}
